Fixed 119387

BUG: 119387


svn path=/trunk/extragear/network/ktorrent/; revision=493563